--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/Users/cobos/Documents/UPC-FIB/IA/Lab1/dist/AIMA.jar"/>
-	<classpathentry kind="lib" path="/Users/cobos/Documents/UPC-FIB/IA/Lab1/dist/Desastres.jar"/>
+	<classpathentry kind="lib" path="/Users/alex/Google Drive/UNI/IA/Practicas/Practica 0/dist/Desastres.jar"/>
+	<classpathentry kind="lib" path="/Users/alex/Google Drive/UNI/IA/Practicas/Sesion 1/Binarios/AIMA.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
